# Learning_GoogleTest

./: .gitignore  CMakeLists.txt  README.md  main.cpp
MyLibrary/: CMakeLists.txt  MyLibrary.cpp  MyLibrary.h
tests/: CMakeLists.txt  test.cpp
